welcome.lessons.welcome.array.has271.Has271.scala.error
has271:12: error: Invalid literal number
}p_dggsmlkdfjg psdfmoqkidsht ùqidjfg mqkjsdkg uhxùcmlvg sfg21 5dfgl kjsdmlk jhfd;g;,n s,fdgn mejrht kjfnm sdfghrl jhdf ioerotiu sjdhf gper tlk hdĝji ùpoje ùrpoj vc vlkk ihds6d54bv mldkut 'iuyivhb :f gjdfgh hd gh fgh fh142 
                                                              ^has271:9: error: illegal start of simple expression
			}
                        ^has271:12: error: ';' expected but identifier found.
}p_dggsmlkdfjg psdfmoqkidsht ùqidjfg mqkjsdkg uhxùcmlvg sfg21 5dfgl kjsdmlk jhfd;g;,n s,fdgn mejrht kjfnm sdfghrl jhdf ioerotiu sjdhf gper tlk hdĝji ùpoje ùrpoj vc vlkk ihds6d54bv mldkut 'iuyivhb :f gjdfgh hd gh fgh fh142 
 ^has271:12: error: expected class or object definition
}p_dggsmlkdfjg psdfmoqkidsht ùqidjfg mqkjsdkg uhxùcmlvg sfg21 5dfgl kjsdmlk jhfd;g;,n s,fdgn mejrht kjfnm sdfghrl jhdf ioerotiu sjdhf gper tlk hdĝji ùpoje ùrpoj vc vlkk ihds6d54bv mldkut 'iuyivhb :f gjdfgh hd gh fgh fh142 
                                                                                 ^has271:12: error: expected class or object definition
}p_dggsmlkdfjg psdfmoqkidsht ùqidjfg mqkjsdkg uhxùcmlvg sfg21 5dfgl kjsdmlk jhfd;g;,n s,fdgn mejrht kjfnm sdfghrl jhdf ioerotiu sjdhf gper tlk hdĝji ùpoje ùrpoj vc vlkk ihds6d54bv mldkut 'iuyivhb :f gjdfgh hd gh fgh fh142 
                                                                                   ^has271:13: error: Unmatched closing brace '}' ignored here
 }
 ^