welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	for (i<- 0 to nums.length-3){
		if (nums(i+1)== 5+ nums(i)){
			if(nums(i+2)==nums(i)-1){
				return true}
				if(nums(i+2)==nums(
				
				
			}
		}
	}
}p_dggsmlkdfjg psdfmoqkidsht ùqidjfg mqkjsdkg uhxùcmlvg sfg21 5dfgl kjsdmlk jhfd;g;,n s,fdgn mejrht kjfnm sdfghrl jhdf ioerotiu sjdhf gper tlk hdĝji ùpoje ùrpoj vc vlkk ihds6d54bv mldkut 'iuyivhb :f gjdfgh hd gh fgh fh142